refactored: comments, Access Modifiers